# tribute

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
adapters/ap2/: package.json
adapters/stripe/: package.json  tsconfig.json
api/: package.json  tsconfig.json
api/src/: index.ts
dashboard/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css
docs/: e2e.md  milestones.md  quickstart.md  sitemap.xml
dos/: package.json  tsconfig.json  vitest.config.ts
dos/src/: do-base.ts  env.ts  (+10 more)
edge-proxy/: package.json  tsconfig.json  vitest.config.ts
infra/: wrangler-api.toml  wrangler-dos.toml  wrangler-test-proxy.toml  wrangler.toml
integrations/: README.md
integrations/python/: .coverage  README.md  pyproject.toml
integrations/python/extras/: __init__.py  llm_openai.py
integrations/python/tests/: test_canonicalization.py  test_decorators.py  test_devtools.py  test_estimate.py  test_openapi.py  test_policy.py  test_usage.py
integrations/python/tribute_core/: __init__.py  canonicalization.py  decorators.py  devtools.py  estimate.py  openapi.py  policy.py  usage.py
integrations/python/tribute_django/: __init__.py  adapter.py
integrations/python/tribute_fastapi/: __init__.py  adapter.py
integrations/python/tribute_flask/: __init__.py  adapter.py
nginx/: Dockerfile
scripts/: postinstall.mjs
specs/: http-contracts.md  merchant-example.json  openai-openapi.json
tests/: package.json  tsconfig.json
(+63 files in other folders)
